--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RootActivity"></activity>
         <activity
             android:name=".ui.register.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:parentActivityName=".ui.login.LoginActivity"
+            android:parentActivityName=".ui.welcome.WelcomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.laureanray.codesimulatorandchecker.ui.login.LoginActivity" />
+                android:value="com.laureanray.codesimulatorandchecker.ui.welcome.WelcomeActivity" />
         </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.welcome.WelcomeActivity"
             android:label="@string/title_activity_login" />
         <activity
             android:name=".MainActivity"
