--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    implementation 'com.google.dagger:dagger-android-support:2.20' // if you use the support libraries
+    implementation 'com.google.dagger:dagger-android-support:2.20'
+    // if you use the support libraries
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
